fix: Add missing colour to dropdown

--- a/components/bnetlogin.module.css
+++ b/components/bnetlogin.module.css
@@ -51,6 +51,7 @@
 }
 
 .dropdownText {
+  color: black;
   display: flex;
   height: 100%;
   align-items: center;
